change position contact

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,7 @@ main {
 }
 
 img{
-    background-color: #fff;
-    border: 2px solid white;
+    background-color: #23242500;
     width: 100%;
     border-radius: 20px;
 }
