--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     font-style: normal;
 }
 body{
-    background-image: url(image/Sfondo.jpg);
+    background-image: url(image/Roccia2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -108,6 +108,7 @@ footer {
     width: 350px;
 }
 .image>img{
+    opacity: 0.8;
     border: none;
     background-color: #23242500;
 }
